# pds-drone-controller

./: CMakeLists.txt  ReadMe.md  TODO
config/: config.cfg.TEMPLATE
include/android/: AndroidReceiver.h  AndroidUDPSocket.h
include/android/converter/: Abstract_AndroidMessageConverter.h  Json_AndroidMessageConverter.h
include/android/message/: Abstract_AndroidMessage.h  Abstract_AndroidMessageConverter.h  Abstract_AndroidReceivedMessage.h  AndroidMessageReceived.h  Arm_MessageReceived.h  Json_AndroidMessageConverter.h  Manual_MessageReceived.h  MessageType.h  TakeOff_MessageReceived.h
include/android/message/received/: Manual_MessageReceived.h  Record_MessageReceived.h  Start_MessageReceived.h  TakeOff_MessageReceived.h
include/android/message/tosend/: Answer_MessageToSend.h  DroneData_MessageToSend.h  DroneStatus_MessageToSend.h  Drone_MessageToSend.h  drone_data_to_send.txt
include/drone/: Data_Drone.h  DroneCommands.h
include/network/: Com_Mavlink.h  UDPSocket.h
include/process/: ProcessExecutor.h
include/threads/: AndroidMessagesHolder.h  AndroidReceiver_ThreadClass.h  AndroidSender_ThreadClass.h  DroneReceiver_ThreadClass.h  DroneSender_ThreadClass.h  SharedMessage.h  SharedMessagesQueue.h
include/threads/bridges/: AndroidMessagesToSendHolder.h  ReceivedMessagesHolder.h  ToAppMessagesHolder.h  ToDroneMessagesHolder.h  ToSendMessagesHolder.h
lib/: CMakeLists.txt
lib/loguru/: CMakeLists.txt
notes/: 0_vscode.txt  1_conception_generale.txt  2_reception_msgs_android.txt  3_communication_drone.txt  4_TCP_et_arm.txt  5_reception_messages_drone.txt  6_lancement_propre  7_record_trajet.txt  mavlink_messages.txt  todo_decembre2021.txt
src/: Main.cpp  global_variables.h
src/android/: AndroidReceiver.cpp  AndroidUDPSocket.cpp  AndroidUDPSocket.h
src/android/converter/: Json_AndroidMessageConverter.cpp  Json_ReceivedMessagesConverter.cpp  Json_ReceivedMessagesConverter.h  Json_ToSendMessagesConverter.cpp  Json_ToSendMessagesConverter.h
src/android/message/: Json_AndroidMessageConverter.cpp  MessageType.h
src/android/message/received/: Ack_MessageReceived.h  Arm_MessageReceived.h  Start_MessageReceived.h  TakeOff_MessageReceived.h
src/android/message/tosend/: DroneData_MessageToSend.h
src/android/network/: AndroidMediator.cpp  AndroidMediator.h  AndroidUDPSocket.cpp
src/business/drone/: Data_Drone.cpp  Data_Drone.h
src/config/: ConfigParams.h  ConfigParser.cpp
src/data_server/ApiHandler/: ApiHandler.cpp  ApiHandler.h
src/data_server/responses/: ErrorResponse.hpp  Response.h
src/drone/: Data_Drone.cpp  Data_Drone.h
src/network/: Com_Mavlink.cpp  Com_Serial.cpp  UDPSocket.cpp
src/process/: ProcessExecutor.cpp
src/threads/: Abstract_ThreadClass.cpp  AndroidMessagesHolder.cpp  AndroidReceiver_ThreadClass.cpp  AndroidReceiver_ThreadClass.h  AndroidSender_ThreadClass.cpp  AndroidSender_ThreadClass.h  DroneReceiver_ThreadClass.cpp  DroneReceiver_ThreadClass.h  DroneSender_ThreadClass.cpp  DroneSender_ThreadClass.h  SharedMessage.cpp  SharedMessagesQueue.cpp
src/threads/bridges/: PathRecorderHandler.cpp  PathRecorderHandler.h  ReceivedMessagesHolder.cpp  ToAppMessagesHolder.cpp
